...
                value: 'fr',
                label: Text('Français'),
                icon: Icon(Icons.language_rounded),
              ),
              ButtonSegment<String>(
                value: 'en',
                label: Text('English'),
                icon: Icon(Icons.language_rounded),
              ),
            ],
            selected: {locale.languageCode},
            onSelectionChanged: (selection) =>
                onLocaleChanged(Locale(selection.first)),
...
